// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert danger 1`] = `
<div
  className="sc-1e38spu-0 sc-1e38spu-1 hWHYWK"
>
  <svg
    className="sc-1e38spu-0 cilMZr"
    fill="currentcolor"
    height={14}
    size={40}
    viewBox="0 0 14 14"
    width={14}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
      fill="white"
    />
  </svg>
  <p
    className="sc-1e38spu-0 humScQ"
    display="flex"
  >
    NOOOOOO!!! Perdonanos, explotó todo! :(
  </p>
  <button
    className="sc-1e38spu-0 hZdKRB"
    display="inline-flex"
    size={32}
  >
    <svg
      className="sc-1e38spu-0 eHPBwm"
      fill="currentcolor"
      height={14}
      viewBox="0 0 14 14"
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
        fill="#716F6F"
      />
    </svg>
  </button>
</div>
`;

exports[`Alert primary default 1`] = `
<div
  className="sc-1e38spu-0 sc-1e38spu-1 hWHYWK"
>
  <svg
    className="sc-1e38spu-0 hviqGv"
    fill="none"
    height="17px"
    size={40}
    viewBox="0 0 22 17"
    width="22px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.18359 7.64653L3.83128 7.29423L3.47773 7.64529L2.05773 9.05529L1.70168 9.40884L2.05648 9.76364L7.64648 15.3536L8.00003 15.7072L8.35359 15.3536L20.3536 3.35364L20.7071 3.00009L20.3536 2.64653L18.9436 1.23653L18.5902 0.883148L18.2366 1.23637L8.0002 11.4631L4.18359 7.64653Z"
      fill="white"
    />
    <path
      d="M4.18359 7.64653L3.83128 7.29423L3.47773 7.64529L2.05773 9.05529L1.70168 9.40884L2.05648 9.76364L7.64648 15.3536L8.00003 15.7072L8.35359 15.3536L20.3536 3.35364L20.7071 3.00009L20.3536 2.64653L18.9436 1.23653L18.5902 0.883148L18.2366 1.23637L8.0002 11.4631L4.18359 7.64653Z"
      fill="white"
    />
  </svg>
  <p
    className="sc-1e38spu-0 humScQ"
    display="flex"
  >
    Éxito!!! Pudiste hacer todo lo que querías y te salió pipi cucu!
  </p>
  <button
    className="sc-1e38spu-0 hZdKRB"
    display="inline-flex"
    size={32}
  >
    <svg
      className="sc-1e38spu-0 eHPBwm"
      fill="currentcolor"
      height={14}
      viewBox="0 0 14 14"
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
        fill="#716F6F"
      />
    </svg>
  </button>
</div>
`;

exports[`Alert warning 1`] = `
<div
  className="sc-1e38spu-0 sc-1e38spu-1 hWHYWK"
>
  <svg
    className="sc-1e38spu-0 jlUyny"
    fill="none"
    height="19px"
    size={40}
    viewBox="0 0 4 19"
    width="4px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M4 0.666748H0V12.6667H4V0.666748ZM0 16.6667C0 15.5622 0.89543 14.6667 2 14.6667C3.10457 14.6667 4 15.5622 4 16.6667C4 17.7713 3.10457 18.6667 2 18.6667C0.89543 18.6667 0 17.7713 0 16.6667Z"
      fill="white"
      fillRule="evenodd"
    />
  </svg>
  <p
    className="sc-1e38spu-0 humScQ"
    display="flex"
  >
    Danger Zone!!!!
  </p>
  <button
    className="sc-1e38spu-0 hZdKRB"
    display="inline-flex"
    size={32}
  >
    <svg
      className="sc-1e38spu-0 eHPBwm"
      fill="currentcolor"
      height={14}
      viewBox="0 0 14 14"
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
        fill="#716F6F"
      />
    </svg>
  </button>
</div>
`;
